OTG 7 commit by AyushR1 https://github.com/AyushR1

--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -79,3 +79,5 @@ obj-$(CONFIG_SENSORS_MAX86X00)	+= max86x00.o
 obj-y += msm_secboot.o
 obj-$(CONFIG_MEMORY_STATE_TIME) += memory_state_time.o
 obj-$(CONFIG_FORCE_FAST_CHARGE) += fastchg.o
+obj-$(CONFIG_CCLOGIC)           += cclogic/
+
