--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -42,6 +42,9 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_ARCH_MSM=y
+CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
+CONFIG_ARCH_MMAP_RND_BITS=y
+CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
 CONFIG_ARCH_MSM8996=y
 CONFIG_PCI_MSM=y
 CONFIG_ENABLE_FP_SIMD_SETTINGS=y
@@ -241,7 +244,7 @@ CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_DMA_CMA=y
-CONFIG_ZRAM=y
+# CONFIG_ZRAM is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
@@ -652,6 +655,8 @@ CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
+CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
+CONFIG_HAVE_ARCH_HARDENED_USERCOPY=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_INTEGRITY=y
 CONFIG_SECURITY_YAMA=y
@@ -687,6 +692,10 @@ CONFIG_CLZ_TAB=y
 CONFIG_MPILIB=y
 CONFIG_OID_REGISTRY=y
 CONFIG_QMI_ENCDEC=y
-
-# Voltage control
 CONFIG_VOLTAGE_CONTROL=y
+CONFIG_ZEN_DECISION=y
+CONFIG_MULTIUSER=y
+CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
+CONFIG_MEMORY_FAILURE=y
+CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
+
