Enable MSM Hotplug

--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -745,4 +745,5 @@ CONFIG_SECURITY_TIOCSTI_RESTRICT=y
 CONFIG_FW_CACHE=y
 CONFIG_MSM_KERNEL_PROTECT_MPU=y
 CONFIG_SOUND_CONTROL=y
+CONFIG_MSM_HOTPLUG=y
 
