Disable Zen Decision (doesn't do anything on SD820)

--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -735,7 +735,7 @@ CONFIG_MPILIB=y
 CONFIG_OID_REGISTRY=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_VOLTAGE_CONTROL=y
-CONFIG_ZEN_DECISION=y
+# CONFIG_ZEN_DECISION is not set
 CONFIG_MULTIUSER=y
 CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 CONFIG_MEMORY_FAILURE=y
