--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -742,7 +742,7 @@ CONFIG_MEMORY_FAILURE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_TTY=y
 CONFIG_SECURITY_TIOCSTI_RESTRICT=y
-CONFIG_FW_CACHE=y
+CONFIG_FW_CACHE=n
 CONFIG_MSM_KERNEL_PROTECT_MPU=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_MSM_HOTPLUG=y
